fixed Docker deployment